--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,6 +6,8 @@ jobs:
     container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          python-version: '3.10' 
       - name: 'make dataset ready'
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
