--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -3,12 +3,16 @@ on: [push]
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml-py3:latest
+    strategy:
+      matrix:
+        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
+    #container: docker://dvcorg/cml-py3:latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          python-version: '3.10' 
+      - uses: actions/checkout@v4
       - name: 'make dataset ready'
+      - uses: actions/setup-python@v5
+       with:
+          python-version:  ${{ matrix.python-version }}
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
