--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -3,10 +3,8 @@ on: [push]
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    strategy:
-      matrix:
-        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
-    #container: docker://dvcorg/cml-py3:latest
+    
+    container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v4
       - name: 'make dataset ready'
