--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: 'make dataset ready'
-      - uses: actions/setup-python@v5
+      #- uses: actions/setup-python@v5
        with:
-          python-version:  ${{ matrix.python-version }}
+          python-version:  3.9
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
