--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,24 +1,48 @@
-name: mlops-sample-project
-on: [push]
-jobs:
-  run:
-    runs-on: [ubuntu-latest]
+# name: mlops-sample-project
+# on: [push]
+# jobs:
+#   run:
+#     runs-on: [ubuntu-latest]
     
-    container: docker://dvcorg/cml-py3:latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: 'make dataset ready'
-      #- uses: actions/setup-python@v5
-       with:
-          python-version:  3.9
-        env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-        run: |
+#     container: docker://dvcorg/cml-py3:latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: 'make dataset ready'
+#       #- uses: actions/setup-python@v5
+#        with:
+#           python-version:  3.9
+#         env:
+#           repo_token: ${{ secrets.GITHUB_TOKEN }}
+#         run: |
 
-          # Your ML workflow goes here
-          pip install -r requirements.txt
-          python src/data_ingestion.py
+#           # Your ML workflow goes here
+#           pip install -r requirements.txt
+#           python src/data_ingestion.py
           
-          # echo "## Model Metrics" > report.md
-          # cat metrics.txt >> report.md
+#           # echo "## Model Metrics" > report.md
+#           # cat metrics.txt >> report.md
           
+name: Python application  
+  
+on:  
+  push:  
+    branches: [ dev ]  
+  
+jobs:  
+  build:  
+  
+    runs-on: ubuntu-latest  
+  
+    steps:  
+    - uses: actions/checkout@v2  
+    - name: Set up Python 3.9  
+      uses: actions/setup-python@v2  
+      with:  
+        python-version: 3.9  
+    - name: Install dependencies  
+      run: |  
+        python -m pip install --upgrade pip  
+        pip install -r requirements.txt  
+    - name: Run tests  
+      run: |  
+        python src/data_ingestion.py 
