--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -45,4 +45,7 @@ jobs:
         pip install -r requirements.txt  
     - name: Run tests  
       run: |  
-        python src/data_ingestion.py 
+        python src/data_ingestion.py
+        git add .
+        git -m "data ingestion completed" 
+        git push
