--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -43,9 +43,9 @@ jobs:
       run: |  
         python -m pip install --upgrade pip  
         pip install -r requirements.txt  
-    - name: Run tests  
+    - name: Ingest Data  
       run: |  
         python src/data_ingestion.py
         git add .
-        git -m "data ingestion completed" 
+        git commit -m "data ingestion completed" 
         git push
