--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -46,7 +46,10 @@ jobs:
     - name: Ingest Data  
       run: |  
         python src/data_ingestion.py
-        git config --global user.name 'Amol suradkar'
+
+    - name: push data to repo
+      run: |
+        git config --global user.name 'amolsuradkar'
         git config --global user.email 'amol2808suradkar@gmail.com'
         git add .
         git commit -m "data ingestion completed" 
