--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -39,6 +39,8 @@ jobs:
       uses: actions/setup-python@v2  
       with:  
         python-version: 3.9  
+      env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install dependencies  
       run: |  
         python -m pip install --upgrade pip  
