--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -55,4 +55,4 @@ jobs:
         git config --global user.email 'amol2808suradkar@gmail.com'
         git add .
         git commit -m "data ingestion completed" 
-        git push
+        git push origin dev
