--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -57,8 +57,8 @@ jobs:
   
     - name: push data to repo
       run: |
-        git config --global user.name 'amolsuradkar'
-        git config --global user.email 'amol2808suradkar@gmail.com'
+        git config --global user.name 'Amol suradkar'
+        git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
         git add .
         git commit -m "data ingestion completed" 
         git push origin dev
