--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -48,6 +48,9 @@ jobs:
     - name: Ingest Data  
       run: |  
         python src/data_ingestion.py
+        git config --global user.name 'Amol suradkar'
+    #     git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
+        git config --global user.email 'amol2808suradkar@gmail.com'
         git add .
         git commit -m "data ingestion completed" 
         git push origin dev
