--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -48,24 +48,20 @@ jobs:
     - name: Ingest Data  
       run: |  
         python src/data_ingestion.py
+  
+    - name: List changes  
+      run: |  
+        git config --global user.name 'Amol suradkar'
+        git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
+        echo "Changes:"  
+        git status  
+        echo "Diff:"  
+        git diff  
+  
+    - name: push data to repo
+      run: |
         git config --global user.name 'Amol suradkar'
         git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
         git add .
         git commit -m "data ingestion completed" 
         git push origin dev
-    # - name: List changes  
-    #   run: |  
-    #     git config --global user.name 'Amol suradkar'
-    #     git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
-    #     echo "Changes:"  
-    #     git status  
-    #     echo "Diff:"  
-    #     git diff  
-  
-    # - name: push data to repo
-    #   run: |
-    #     git config --global user.name 'Amol suradkar'
-    #     git config --global user.email '36931368+amolsuradkar@users.noreply.github.com'
-    #     git add .
-    #     git commit -m "data ingestion completed" 
-    #     git push origin dev
