--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,28 +1,6 @@
-# name: mlops-sample-project
-# on: [push]
-# jobs:
-#   run:
-#     runs-on: [ubuntu-latest]
-    
-#     container: docker://dvcorg/cml-py3:latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: 'make dataset ready'
-#       #- uses: actions/setup-python@v5
-#        with:
-#           python-version:  3.9
-#         env:
-#           repo_token: ${{ secrets.GITHUB_TOKEN }}
-#         run: |
 
-#           # Your ML workflow goes here
-#           pip install -r requirements.txt
-#           python src/data_ingestion.py
           
-#           # echo "## Model Metrics" > report.md
-#           # cat metrics.txt >> report.md
-          
-name: Python application  
+name: Ingest Data   
 permissions:
   contents: write 
 on:  
